k8s-install/base/service-im-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-gateway
  namespace: im
  labels:
    app: im-gateway
spec:
  type: ClusterIP
  selector:
    app: im-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
