k8s-install/base/service-im-media.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-media
  namespace: im
  labels:
    app: im-media
spec:
  type: ClusterIP
  selector:
    app: im-media
  ports:
    - name: http
      port: 8084
      targetPort: http
