k8s-install/base/service-im-message.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-message
  namespace: im
  labels:
    app: im-message
spec:
  type: ClusterIP
  selector:
    app: im-message
  ports:
    - name: http
      port: 8082
      targetPort: http
