k8s-install/base/service-im-push.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-push
  namespace: im
  labels:
    app: im-push
spec:
  type: ClusterIP
  selector:
    app: im-push
  ports:
    - name: http
      port: 8085
      targetPort: http
