k8s-install/base/service-im-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-user
  namespace: im
  labels:
    app: im-user
spec:
  type: ClusterIP
  selector:
    app: im-user
  ports:
    - name: http
      port: 8081
      targetPort: http
